--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "babel-plugin-dva-hmr": "^0.3.2",
     "babel-plugin-import": "^1.8.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.5",
     "eslint": "^4.14.0",
     "eslint-config-airbnb": "^17.0.0",
     "eslint-plugin-flowtype": "^2.34.1",
