--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "antd": "^3.7.0",
     "dva": "^2.3.1",
+    "keymaster": "^1.6.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0"
   },
