--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "private": true,
   "scripts": {
+    "test": "jest",
     "start": "roadhog server",
     "build": "roadhog build",
     "analyze": "ANALYZE=1 roadhog build",
